# Student-Registration

./: CMakeLists.txt  main.cpp
data/: rinput.txt  routput.txt
src/: Date.cpp  Date.h  Registration.cpp  Registration.h  Result.cpp  Result.h  Units.cpp  Units.h
tests/: DateTests.cpp  RegistrationTests.cpp  ResultsTests.cpp  UnitsTests.cpp
